force-app/main/default/objects/vlocity_cmt__CatalogProductRelationship__c/vlocity_cmt__CatalogProductRelationship__c.object-meta.xml
<CustomObject>
    <description>Associates a product with a catalog or catalog category.</description>
    <label>Catalog Product Relationship</label>
    <nameField>
        <label>Catalog Product Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catalog Product Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>