force-app/main/default/objects/vlocity_cmt__CatalogProductRelationship__c/fields/vlocity_cmt__ItemType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ItemType__c</fullName>
    <description>Will hold one of 4 values - Product, Promotion, Product with Promotion, Null depending on how the two fields of Product and Promotion are populated</description>
    <formula>IF(ISBLANK(vlocity_cmt__Product2Id__c),IF(ISBLANK(vlocity_cmt__PromotionId__c),Null,&apos;Promotion&apos;),IF(ISBLANK(vlocity_cmt__PromotionId__c),&apos;Product&apos;,&apos;Product with Promotion&apos;))</formula>
    <label>Item Type</label>
    <type>Text</type>
</CustomField>