force-app/main/default/objects/vlocity_cmt__CatalogProductRelationship__c/fields/vlocity_cmt__PromotionId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__PromotionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion</label>
    <referenceTo>vlocity_cmt__Promotion__c</referenceTo>
    <relationshipLabel>Catalog Product Relationships</relationshipLabel>
    <relationshipName>CatalogProductRelationships</relationshipName>
    <type>Lookup</type>
</CustomField>